# emtg

./: LICENSE.txt
PSBI_Donald/: PyEMTG.sln
PSBI_Donald/PyEMTG/: EOM.py  Mission.py  OptionsNotebook.py  PyEMTG.pyproj  default.emtgopt
PSBI_Donald/src/: EMTG_WORHP_interface.h  body.cpp  find_mass_to_orbit.cpp  mission.h  missionoptions.h  orbit_element_conversions.cpp  phase.h
branch/EMTG-David/: README.opensource
branch/EMTG-David/PyEMTG/: MissionOptions.py  MissionPanel.py  PyEMTG.lnk  PyEMTG.options  PyEMTG_interface.py  Universe.py  default.emtgopt
branch/EMTG-David/Universe/: MARS.emtg_universe
branch/EMTG-David/src/: EMTG_v8.cpp  FBLTphase.cpp  FBLTphase.h  Lambert_AroraRussell.cpp  MGADSMphase.cpp  MGALTphase.cpp  MGANDSMphase.cpp  MGAphase.cpp  NBH.cpp  NBH.h  PSBIphase.cpp  TestAlg1.cpp  TestAlg1.h  body.cpp  equations_of_motion.cpp  equations_of_motion.h  journey.cpp  journey.h  missionoptions.cpp  monotonic_basin_hopping.cpp  monotonic_basin_hopping.h  outerloop_NSGAII.cpp  phase.h  problem.cpp  problem.h
branch/EMTG-GMAT/: EMTG_GMAT_todo.txt  EMTG_v8.vcxproj
branch/EMTG-GMAT/PyEMTG/: EOM.py  Journey.py  Mission.py  MissionPanel.py  NSGAIIpanel.py  NSGAIIpopulation.py  PyEMTG.options  kepler.py
branch/EMTG-GMAT/Universe/: Lacadiera.emtg_universe
branch/EMTG-GMAT/src/: AmsterdamRootFinder.cpp  EMTG_math.h  EMTG_outerloop_solution.cpp  EMTG_v8.cpp  GMATScripter.cpp  GMATScripter.h  GMAT_interface.cpp  Lambert_AroraRussell.cpp  MGADSMphase.cpp  MGALTphase.cpp  MGANDSMphase.h  MGAphase.cpp  SNOPT_user_function.cpp  SNOPT_user_function.h  STM.cpp  bplane.h  find_mass_to_orbit.cpp  interpolator.cpp  journey.cpp  journey.h  kepler_lagrange_laguerre_conway.cpp  kepler_lagrange_laguerre_conway.h  lazy_race_tree_search.cpp  load_asteroid_list.cpp  mission.cpp  missionoptions.cpp  mjd_to_mdyhms.h  monotonic_basin_hopping.h  outerloop_NSGAII.h  phase.cpp  phase.h  quicksort.h  snoptProblemExtension.h  universe.cpp
branch/EMTG-GTOC7/: EMTG_v8.vcxproj  Full_Koronis.asteroidlist  Koronis.txt
branch/EMTG-GTOC7/PyEMTG/: JourneyOptions.py  LRTS_sequence.py  MissionOptions.py  OptionsNotebook.py  PyEMTG.options  PyEMTG.pyproj  PyEMTG_interface.py  default.emtgopt
branch/EMTG-GTOC7/Universe/: GTOC7.emtg_universe
branch/EMTG-GTOC7/Utilities/: emtg_qsub_submit.sh  emtg_result_cleanup.sh  generate_full_asteroidlist.sh  leapfrog.py  leapfrog_cleanup.sh
branch/EMTG-GTOC7/Utilities/Options - Qsub File Generator/: CMakeLists.txt  Full_AsteroidList.asteroidlist  GTOC7ASTEROIDS.asteroidlist  LRTS_model.emtgopt  LRTS_model_BlueWaters.qsub  LRTS_model_Taub.qsub  OPTIONSGENERATORREADME.txt  Sample_Asteroid_Seed.seed
branch/EMTG-GTOC7/Utilities/Options - Qsub File Generator/src/: CMakeLists.txt  options_generator.cpp
branch/EMTG-GTOC7/src/: AdaptiveConstrainedDiffEvolve.h  EMTG_WORHP_interface.cpp  EMTG_string_utilities.cpp  EMTG_string_utilities.h  EMTG_v8.cpp  FBLTphase.cpp  FBLTphase.h  Kepler_Lagrange_Laguerre_Conway_Der.cpp  MGADSMphase.cpp  MGADSMphase.h  MGALTphase.cpp  MGALTphase.h  MGANDSMphase.h  MGAphase.cpp  MGAphase.h  journey.cpp  lazy_race_tree_search.cpp  lazy_race_tree_search.h  load_asteroid_list.cpp  mission.cpp  mission.h  missionoptions.cpp  missionoptions.h  monotonic_basin_hopping.cpp  orbit_element_conversions.cpp  phase.h  problem.cpp  problem.h  universe.cpp
branch/EMTG-installationcleanup/: EMTG_v8.vcxproj  PyEMTG.sln
branch/EMTG-installationcleanup/PyEMTG/: Mission.py  MissionEvent.py  OptionsNotebook.py
branch/EMTG-installationcleanup/src/: EMTG_Matrix.h  EMTG_v8.cpp  FBLTSphase.cpp  FBLTphase.h  GMAT_interface.cpp  Lambert_AroraRussell.h  MGALTphase.cpp  MGALTphase.h  MGANDSMphase.h  MGAphase.cpp  STM.h  body.cpp  body.h  bplane.cpp  engine_model.cpp  frame.cpp  interpolator.cpp  journey.cpp  journey.h  missionoptions.cpp  monotonic_basin_hopping.h  phase.cpp  problem.cpp  quicksort.cpp  rk8713M.cpp  universe.cpp
branch/EMTG-installercleanup/: CMakeLists.txt  EMTG-Config.cmake  EMTG_v8.vcxproj  FindSNOPT.cmake
branch/EMTG-installercleanup/PyEMTG/: BubbleOptions.py  PlotOptions.py  PyEMTG.options  PyEMTG_interface.py  UniverseNotebook.py  default.emtgopt
branch/EMTG-installercleanup/src/: AdaptiveConstrainedDiffEvolve.cpp  CMakeLists.txt  EMTG_WORHP_interface.cpp  EMTG_v8.cpp  FBLTphase.cpp  MGALTphase.h  MGAphase.cpp  journey.cpp  monotonic_basin_hopping.h  problem.cpp  rk8713M.cpp
branch/EMTG-unitscrubbing/: EMTG_v8.sln  EMTG_v8.vcxproj  Makefile  README.opensource
branch/EMTG-unitscrubbing-Donald/: EMTG_v8.vcxproj
branch/EMTG-unitscrubbing-Donald/Universe/: SATURN.emtg_universe
branch/EMTG-unitscrubbing-Donald/src/: AmsterdamRootFinder.h  EMTG_v8.cpp  FBLT_EOM.cpp  phase.cpp  (+15 more)
branch/EMTG_student/: README.student
branch/EMTGv8_SNOPT72122/: PyEMTG.sln
branch/PSBI_and_FBLT_derivatives/: EMTG_v8.vcxproj
trunk/: EMTG_v8.sln  EMTG_v8.vcxproj  Makefile  default.emtgopt
trunk/PyEMTG/: Archive.py  AstroFunctions.py  EOM.py  Journey.py  JourneyOptions.py  Mission.py  MissionEvent.py  MissionOptions.py  MissionPanel.py  NSGAIIpanel.py  NSGAIIpopulation.py  OptionsNotebook.py  PyEMTG.lnk  PyEMTG.options  PyEMTG.pyproj  PyEMTG_interface.py  README.txt  ThrottleTable.py  UniverseNotebook.py  default.emtgopt
trunk/Universe/: EARTH.emtg_universe
trunk/src/: AdaptiveConstrainedDiffEvolve.cpp  EMTG_v8.cpp  FBLTSphase.h  FBLTphase.cpp  FBLTphase.h  Kepler_Lagrange_Laguerre_Conway_Der.cpp  Kepler_Lagrange_Laguerre_Conway_Der.h  LT_Spiral.cpp  Lambert_AroraRussell.cpp  Lambert_AroraRussell.h  MGADSMphase.cpp  MGADSMphase.h  MGALTphase.cpp  MGALTphase.h  MGANDSMphase.cpp  MGAphase.cpp  MGAphase.h  PSBIphase.h  SNOPT_user_function.cpp  TwoPointShootingPhase.cpp  TwoPointShootingPhase.h  UniversalKeplerPropagator.cpp  body.cpp  body.h  engine_model.cpp  equations_of_motion.cpp  frame.h  insertion_burn.cpp  integerGA.cpp  integerGA.h  interpolator.h  journey.cpp  journey.h  kepler_lagrange_laguerre_conway.cpp  kepler_lagrange_laguerre_conway.h  mission.cpp  mission.h  missionoptions.cpp  missionoptions.h  monotonic_basin_hopping.cpp  (+13 more)
(+277 files in other folders)
